# webrogue-sdk

./: .gitignore  .gitmodules  LICENSE  README.md  _build.sh  build.sh  make_image.sh  package.sh  wasi-sdk-p1-pthread.cmake
.github/workflows/: build_sdk.yml
builder/: Dockerfile  bash.sh  build.sh  builder.Dockerfile  common
examples/: .gitignore  build.sh  docker.Makefile  make_image.sh
examples/cpu_rendering/: CMakeLists.txt  docker.Makefile  main.c  webrogue.json
examples/empty/: docker.Makefile  empty.wrapp  webrogue.json
examples/glfw_glxgears_gles/: .gitignore  docker.Makefile  gears.c  gears_original.c  webrogue.json
examples/glfw_glxgears_gles/glad/: gles2.h
examples/glfw_vulkan/: .gitignore  CMakeLists.txt  docker.Makefile  main.c  webrogue.json
examples/gtk/: CMakeLists.txt  docker.Makefile  main.c  webrogue.json
examples/gtk/data/usr/share/fonts/: fonts.conf
examples/gtk/data/usr/share/fonts/conf.d/: 48-guessfamily.conf  49-sansserif.conf  README
examples/raylib/: CMakeLists.txt  docker.Makefile  webrogue.json
examples/sdl_dev/: CMakeLists.txt  docker.Makefile  sdl_dev.c  webrogue.json
examples/stk/: .gitignore  docker.Makefile  webrogue.json
examples/swift/: Package.swift  webrogue.json
examples/swift/Sources/WebrogueGFX/: WebrogueGFX.swift
examples/swift/Sources/WebrogueGFXRaw/include/: WebrogueGFXRaw.h
examples/swift/Sources/main/: main.swift
libraries/: .gclient  .gitignore  Makefile  build_angle.sh  cached_dist_copy.py  copied_sources.txt  copy_sources.sh  fix_pkgconfig_prefix.py  get_angle.sh  meson_overrides.txt
libraries/EGL/: eglplatform.h
libraries/GLES2/: gl2ext.h
libraries/cxxemulatedthrow/: CMakeLists.txt  cxxemulatedthrow.c
libraries/jpeg/: .gitignore  CMakeLists.txt
libraries/mbedtls_patch/: mbedtls_config.h  net_sockets.c  platform_util.c  timing.c
libraries/pkgconfig/: gl.pc
libraries/webrogue_gfx/: CMakeLists.txt  webrogue_gfx.c  webrogue_gfx.h  webrogue_gfx_events.c  webrogue_gfx_gl.cpp  webrogue_gfx_stream.cpp
libraries/webroguegfx/: .gitignore  CMakeLists.txt  webroguegfx.c  webroguegfx.h  webroguegfx.pc.cmakein  webroguegfx_cpu_rendering.c  webroguegfx_events.c  webroguegfx_gl.cpp  webroguegfx_internal.h  webroguegfx_vulkan.c
libraries/webroguegfx/aemu/: LICENSE
libraries/webroguegfx/aemu/base/include/aemu/base/: Optional.h
libraries/webroguegfx/aemu/base/include/aemu/base/containers/: EntityManager.h
libraries/webroguegfx/aemu/base/include/aemu/base/files/: Stream.h
libraries/webroguegfx/aemu/host-common/include/host-common/: logging.h
libraries/webroguegfx/gfxstream/common/opengl/include/EGL/: eglplatform.h
libraries/webroguegfx/gfxstream/guest/GLESv1_enc/: GLEncoder.h  gl_enc.h
libraries/webroguegfx/gfxstream/guest/GLESv2_enc/: GL2Encoder.cpp  GL2Encoder.h  IOStream2.cpp  gl2_enc.cpp  gl2_enc.h
libraries/webroguegfx/gfxstream/guest/OpenglCodecCommon/: GLClientState.cpp  GLESTextureUtils.cpp  glUtils.cpp  glUtils.h
libraries/webroguegfx/gfxstream/guest/OpenglSystemCommon/: HostConnection.cpp  HostConnection.h  ProcessPipe.cpp
libraries/webroguegfx/gfxstream/guest/android-emu/aemu/base/: Optional.h
libraries/webroguegfx/gfxstream/guest/renderControl_enc/: ExtendedRenderControl.h  renderControl_enc.h
libraries/webroguegfx/gfxstream/include/render-utils/: IOStream.h
meson/: mesa_build_cmd.sh
opt/: .gitignore  Dockerfile  make_symlinks.sh  meson  wasi-sdk-p1-pthread.cmake
opt/simple/: .gitignore  Makefile  main.c  webrogue.json
opt/wasip1/: meson_cross.txt  toolchain.cmake
package/: .dockerignore  Dockerfile
